# OpenCV-Object-detection-Cpp

./: CMakeLists.txt  Onnxconverter.ipynb  README.md  object-detection.cpp
